chore: without media-screens

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,45 +14,45 @@
     height: 100vh;
 }
 
-@media screen and (max-width: 1000px) {
-    .main-container {
-        padding: 0 20px;
-    }
-}
+// @media screen and (max-width: 1000px) {
+//     .main-container {
+//         padding: 0 20px;
+//     }
+// }
 
-@media screen and (min-width: 1000px) and (max-width: 1250px) {
-    .main-container {
-        padding: 0 100px;
-    }
-}
+// @media screen and (min-width: 1000px) and (max-width: 1250px) {
+//     .main-container {
+//         padding: 0 100px;
+//     }
+// }
 
-@media screen and (min-width: 1250px) and (max-width: 1400px) {
-    .main-container {
-        padding: 0 200px;
-    }
-}
+// @media screen and (min-width: 1250px) and (max-width: 1400px) {
+//     .main-container {
+//         padding: 0 200px;
+//     }
+// }
 
-@media screen and (min-width: 1400px) and (max-width: 1500px) {
-    .main-container {
-        padding: 0 250px;
-    }
-}
+// @media screen and (min-width: 1400px) and (max-width: 1500px) {
+//     .main-container {
+//         padding: 0 250px;
+//     }
+// }
 
-@media screen and (min-width: 1500px) {
-    .main-container {
-        padding: 0 350px;
-    }
-}
+// @media screen and (min-width: 1500px) {
+//     .main-container {
+//         padding: 0 350px;
+//     }
+// }
 
 
-.padding-vertical-80 {
-    padding-top: 80px;
-    padding-bottom: 40px;
-}
+// .padding-vertical-80 {
+//     padding-top: 80px;
+//     padding-bottom: 40px;
+// }
 
-// media queries
-@media (max-height: 750px) {
-    .padding-vertical-80 {
-        padding-top: 40px;
-    } 
-}
+// // media queries
+// @media (max-height: 750px) {
+//     .padding-vertical-80 {
+//         padding-top: 40px;
+//     } 
+// }
