feat: add handleValidation for providerID

--- a/src/components/molecules/CustomModal/CustomModal.scss
+++ b/src/components/molecules/CustomModal/CustomModal.scss
@@ -27,3 +27,9 @@
         color: $primary-color !important;
     }
 }
+
+#provider-error {
+    font-size: smaller;
+    font-weight: 600;
+    color: darkred;
+}
