feat: add blankTable customSpinner for loading state of the Table

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,6 @@
+//atoms
+@import url('./components/atoms/CustomSpinner/CustomSpinner.scss');
+
 //molecules
 @import url('./components/molecules/CustomTable/CustomTable.scss');
 @import url('./components/molecules/CustomModal/CustomModal.scss');
